--- a/src/app/admin/alerts/alerts/alerts.component.html
+++ b/src/app/admin/alerts/alerts/alerts.component.html
@@ -7,16 +7,15 @@
                         <h4 class="card-title">Opciones</h4>
                     </div>
                     <div class="card-body">
-                        <a [routerLink]="['/admin', 'administrador-inmueble']" class="btn btn-warning btn-block">Agregar
-                            nuevo</a>
+                        <a [routerLink]="['/admin', 'administrador-inmueble']" class="btn btn-warning btn-block">Publicar alerta</a>
                     </div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-12  col-lg-9">
                 <div class="card">
                     <div class="card-header card-header-danger">
-                        <h4 class="card-title">TITULO</h4>
-                        <p class="card-category">Listado de *</p>
+                        <h4 class="card-title">Alertas</h4>
+                        <p class="card-category">Listado de alertas realizadas</p>
                     </div>
                     <div class="card-body">
                         <div *ngIf="Data">
