--- a/src/app/admin/articles/articles/articles.component.html
+++ b/src/app/admin/articles/articles/articles.component.html
@@ -8,15 +8,15 @@
                     </div>
                     <div class="card-body">
                         <a [routerLink]="['/admin', 'administrador-inmueble']" class="btn btn-warning btn-block">Agregar
-                            nuevo</a>
+                            articulo</a>
                     </div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-12  col-lg-9">
                 <div class="card">
                     <div class="card-header card-header-danger">
-                        <h4 class="card-title">TITULO</h4>
-                        <p class="card-category">Listado de *</p>
+                        <h4 class="card-title">Articulos</h4>
+                        <p class="card-category">Listado de articulos</p>
                     </div>
                     <div class="card-body">
                         <div *ngIf="Data">
