--- a/src/app/admin/pets/pets/pets.component.html
+++ b/src/app/admin/pets/pets/pets.component.html
@@ -15,8 +15,8 @@
             <div class="col-sm-12 col-md-12  col-lg-9">
                 <div class="card">
                     <div class="card-header card-header-danger">
-                        <h4 class="card-title">TITULO</h4>
-                        <p class="card-category">Listado de *</p>
+                        <h4 class="card-title">Masotas</h4>
+                        <p class="card-category">Listado de mascotas</p>
                     </div>
                     <div class="card-body">
                         <div *ngIf="Data">
