--- a/src/app/admin/articles/article-editor/article-editor.component.html
+++ b/src/app/admin/articles/article-editor/article-editor.component.html
@@ -1,18 +1,34 @@
-<!-- <p>article-editor works!</p> -->
 <div class="main-content">
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 col-md-12  col-lg-12">
                 <div class="card">
                     <div class="card-header card-header-danger">
-                        <h4 class="card-title">Articulos</h4>
-                        <p class="card-category">Listado de articulos</p>
+                        <h4 class="card-title">Articulo</h4>
+                        <p class="card-category">Agregar nuevo articulo</p>
                     </div>
                     <div class="card-body">
-                        <button (click)="Guardar()" >Guardar</button>
-                        <ckeditor [editor]="Editor"   (change)="onChange($event)"></ckeditor>
-                        <div class="content" #content>
-                        </div>
+                        <form [formGroup]="ArticleForm">
+                            <div class="row">
+                                <div class="col-sm-12 col-md-8">
+                                    <mat-form-field class="example-full-width">
+                                        <input matInput formControlName="Title" placeholder="Titulo">
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-sm-12">
+                                    <ckeditor [editor]="Editor" (change)="onChange($event)"></ckeditor>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-12">
+                <div class="card card-profile">
+                    <div class="card-body left">
+                        <a (click)="Save()" class="btn btn-info left">Guardar articulo</a>
+                        <a (click)="Delete()" *ngIf="Edicion" class="btn btn-info">Eliminar articulo</a>
+                        <a (click)="Cancel()" class="btn btn-info float-right">Cancelar</a>
                     </div>
                 </div>
             </div>
