--- a/src/app/admin/articles/articles/articles.component.html
+++ b/src/app/admin/articles/articles/articles.component.html
@@ -7,7 +7,7 @@
                         <h4 class="card-title">Opciones</h4>
                     </div>
                     <div class="card-body">
-                        <a [routerLink]="['/admin', 'administrador-inmueble']" class="btn btn-warning btn-block">Agregar
+                        <a [routerLink]="['/admin', 'edicion-articulo']" class="btn btn-warning btn-block">Agregar
                             articulo</a>
                     </div>
                 </div>
