edición de alertas

--- a/src/app/admin/alerts/alert-editor/alert-editor.component.html
+++ b/src/app/admin/alerts/alert-editor/alert-editor.component.html
@@ -16,7 +16,9 @@
                                     </mat-form-field>
                                 </div>
                                 <div class="col-sm-12">
-                                    <!-- <ckeditor [editor]="Editor" formControlName="Content" (change)="onChange($event)"></ckeditor> -->
+                                    <mat-form-field class="example-full-width">
+                                        <textarea matInput formControlName="Descripcion" placeholder="Mensaje" rows="5"></textarea>
+                                      </mat-form-field>
                                 </div>
                             </div>
                         </form>
