--- a/src/app/admin/alerts/alerts/alerts.component.html
+++ b/src/app/admin/alerts/alerts/alerts.component.html
@@ -7,7 +7,7 @@
                         <h4 class="card-title">Opciones</h4>
                     </div>
                     <div class="card-body">
-                        <a [routerLink]="['/admin', 'administrador-inmueble']" class="btn btn-warning btn-block">Publicar alerta</a>
+                        <a [routerLink]="['/admin', 'edicion-alerta']" class="btn btn-warning btn-block">Publicar alerta</a>
                     </div>
                 </div>
             </div>
