--- a/src/app/admin/alerts/alert-editor/alert-editor.component.scss
+++ b/src/app/admin/alerts/alert-editor/alert-editor.component.scss
@@ -9,3 +9,59 @@
 .btn.btn-info {
     color: white !important;
 }
+
+
+.image-card {
+    margin: 8px;
+    display: inline-block;
+    box-shadow: 5px 5px 5px;
+
+    img {
+        max-width: 200px;
+        max-height: 200px;
+    }
+
+    .erase{
+        position: absolute;;
+    }
+
+    a.erase-button{
+        float:right;
+        margin-top:-30px;
+        margin-right:-30px;
+        cursor:pointer;
+        color: #fff;
+        border: 1px solid #5f5656;
+        border-radius: 30px;
+        background: #f44336;
+        font-size: 31px;
+        font-weight: bold;
+        display: inline-block;
+        line-height: 0px;
+        padding: 11px 3px;       
+    }
+    
+    .erase-button:before {
+        content: "×";
+    }
+}
+
+/*Image card */
+
+.input-file {
+    background-color: #f44336;
+    color: white;
+    border-radius: 50px;
+    padding: 8px 10px;
+    text-align: left;
+    cursor: pointer;
+
+
+    input[type="file"] {
+        display: none;
+    }
+}
+
+.input-file:hover {
+    box-shadow: 0 14px 26px -12px rgba(244, 67, 54, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(244, 67, 54, 0.2);
+}
