--- a/src/app/admin/generalConsultations/general-consultation-editor/general-consultation-editor.component.html
+++ b/src/app/admin/generalConsultations/general-consultation-editor/general-consultation-editor.component.html
@@ -1,1 +1,40 @@
-<p>general-consultation-editor works!</p>
+<div class="main-content">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-12 col-md-12  col-lg-12">
+                <div class="card">
+                    <div class="card-header card-header-danger">
+                        <h4 class="card-title">Consulta general</h4>
+                        <p class="card-category">Agregar consulta general</p>
+                    </div>
+                    <div class="card-body">
+                        <form [formGroup]="ConsultationForm">
+                            <div class="row">
+                                <div class="col-sm-12 col-md-8">
+                                    <mat-form-field class="example-full-width">
+                                        <input matInput formControlName="Title" placeholder="Titulo">
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-sm-12">
+                                    <mat-form-field class="example-full-width">
+                                        <textarea matInput formControlName="Message" placeholder="Mensaje"
+                                            rows="5"></textarea>
+                                    </mat-form-field>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-12">
+                <div class="card card-profile">
+                    <div class="card-body left">
+                        <a (click)="Save()" class="btn btn-info left">Guardar articulo</a>
+                        <a (click)="Delete()" *ngIf="Edicion" class="btn btn-info">Eliminar articulo</a>
+                        <a (click)="Cancel()" class="btn btn-info float-right">Cancelar</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
