listado y edición de mascotas

--- a/src/app/admin/generalConsultations/general-consultation-editor/general-consultation-editor.component.html
+++ b/src/app/admin/generalConsultations/general-consultation-editor/general-consultation-editor.component.html
@@ -29,8 +29,8 @@
             <div class="col-md-12">
                 <div class="card card-profile">
                     <div class="card-body left">
-                        <a (click)="Save()" class="btn btn-info left">Guardar articulo</a>
-                        <a (click)="Delete()" *ngIf="Edicion" class="btn btn-info">Eliminar articulo</a>
+                        <a (click)="Save()" class="btn btn-info left">Guardar consulta general</a>
+                        <a (click)="Delete()" *ngIf="Edicion" class="btn btn-info">Eliminar consulta general</a>
                         <a (click)="Cancel()" class="btn btn-info float-right">Cancelar</a>
                     </div>
                 </div>
