--- a/src/app/login/singup/singup.component.html
+++ b/src/app/login/singup/singup.component.html
@@ -4,24 +4,22 @@
         <div class="card card-signin my-5">
           <div class="card-body">
             <h5 class="card-title text-center">Registrate</h5>
-            <form class="form-signin">
+            <form class="form-signin" [formGroup]="LoginForm">
               <div class="form-label-group">
-                <input type="email" id="inputEmail" class="form-control" placeholder="Correo electrónico" required autofocus>
-                <!-- <label for="inputEmail">Email address</label> -->
+                <input formControlName="Email" type="email" id="inputEmail" class="form-control" placeholder="Correo electrónico" required autofocus>
               </div>
               <div class="form-label-group">
-                <input type="password" id="inputPassword" class="form-control" placeholder="Contrasela" required>
-                <!-- <label for="inputPassword">Password</label> -->
+                <input formControlName="password" type="password" id="inputPassword" class="form-control" placeholder="Contraseña" required>
+              </div>
+              <div class="form-label-group">
+                <input formControlName="confirmPassword" type="password" id="inputPassword" class="form-control" placeholder="Confirmar contraseña" required>
               </div>
               <div class="custom-control custom-checkbox mb-3">
                 <input type="checkbox" class="custom-control-input" id="customCheck1">
                 <label class="custom-control-label" for="customCheck1">Recuerdame</label>
               </div>
-              <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Registrate</button>
+              <button (click)="createUser()" class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Registrate</button>
               <p>¿Ya tienes cuenta? <a [routerLink]="['/session', 'singin']">inicia sessión</a></p>
-              <!-- <hr class="my-4"> -->
-              <!-- <button class="btn btn-lg btn-google btn-block text-uppercase" type="submit"><i class="fab fa-google mr-2"></i> Sign in with Google</button>
-              <button class="btn btn-lg btn-facebook btn-block text-uppercase" type="submit"><i class="fab fa-facebook-f mr-2"></i> Sign in with Facebook</button> -->
             </form>
           </div>
         </div>
