--- a/src/app/login/singin/singin.component.html
+++ b/src/app/login/singin/singin.component.html
@@ -4,13 +4,13 @@
         <div class="card card-signin my-5">
           <div class="card-body">
             <h5 class="card-title text-center">Ingresa</h5>
-            <form class="form-signin">
+            <form class="form-signin" [formGroup]="LoginForm">
               <div class="form-label-group">
-                <input type="email" id="inputEmail" class="form-control" placeholder="Correo electrónico" required autofocus>
+                <input formControlName="Email" type="email" id="inputEmail" class="form-control" placeholder="Correo electrónico" required autofocus>
                 <!-- <label for="inputEmail">Email address</label> -->
               </div>
               <div class="form-label-group">
-                <input type="password" id="inputPassword" class="form-control" placeholder="Contrasela" required>
+                <input formControlName="password" type="password" id="inputPassword" class="form-control" placeholder="Contrasela" required>
                 <!-- <label for="inputPassword">Password</label> -->
               </div>
               <p class="forgotten"><a [routerLink]="['/session', 'forgottenpassword']">¿Has olvidado tu contraseña?</a></p>
@@ -18,7 +18,7 @@
                 <input type="checkbox" class="custom-control-input" id="customCheck1">
                 <label class="custom-control-label" for="customCheck1">Recuerdame</label>
               </div>
-              <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Iniciar sessión</button>
+              <button (click)="loginUser()" class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Iniciar sessión</button>
               <p>¿No tiene usuario? <a [routerLink]="['/session', 'singup']">registrate</a></p>
               <!-- <hr class="my-4"> -->
               <!-- <button class="btn btn-lg btn-google btn-block text-uppercase" type="submit"><i class="fab fa-google mr-2"></i> Sign in with Google</button>
