--- a/src/app/login/forgotten-password/forgotten-password.component.html
+++ b/src/app/login/forgotten-password/forgotten-password.component.html
@@ -4,12 +4,12 @@
         <div class="card card-signin my-5">
           <div class="card-body">
             <h5 class="card-title text-center">Recuperar contraseña</h5>
-            <form class="form-signin">
+            <form class="form-signin" [formGroup]="LoginForm">
               <div class="form-label-group">
-                <input type="email" id="inputEmail" class="form-control" placeholder="Correo electrónico" required autofocus>
+                <input formControlName="Email" type="email" id="inputEmail" class="form-control" placeholder="Correo electrónico" required autofocus>
                 <!-- <label for="inputEmail">Email address</label> -->
               </div>
-              <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Recuperar contraseña</button>
+              <button (click)="ResetPassword()" class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Recuperar contraseña</button>
               <!-- <hr class="my-4"> -->
               <!-- <button class="btn btn-lg btn-google btn-block text-uppercase" type="submit"><i class="fab fa-google mr-2"></i> Sign in with Google</button>
               <button class="btn btn-lg btn-facebook btn-block text-uppercase" type="submit"><i class="fab fa-facebook-f mr-2"></i> Sign in with Facebook</button> -->
