--- a/src/app/admin/profile/profile/profile.component.html
+++ b/src/app/admin/profile/profile/profile.component.html
@@ -8,7 +8,7 @@
                         <p class="card-category">Complete your profile</p>
                     </div>
                     <div class="card-body">
-                        <form>
+                        <form [formGroup]="UserForm">
                             <div class="row">
                                 <div class="col-md-6">
                                     <mat-form-field class="example-full-width">
