--- a/src/app/admin/profile/profile/profile.component.html
+++ b/src/app/admin/profile/profile/profile.component.html
@@ -4,15 +4,15 @@
             <div class="col-md-8">
                 <div class="card">
                     <div class="card-header card-header-danger">
-                        <h4 class="card-title">Edit Profile</h4>
-                        <p class="card-category">Complete your profile</p>
+                        <h4 class="card-title">Editar Perfil</h4>
+                        <p class="card-category">Completa tus datos</p>
                     </div>
                     <div class="card-body">
                         <form [formGroup]="UserForm">
                             <div class="row">
                                 <div class="col-md-6">
                                     <mat-form-field class="example-full-width">
-                                      <input matInput formControlName="Username" placeholder="Username">
+                                      <input matInput formControlName="Email" placeholder="Username" disabled>
                                     </mat-form-field>
                                 </div>
                                 <div class="col-md-6">
@@ -33,7 +33,7 @@
                                   </mat-form-field>
                                 </div>
                             </div>
-                            <button mat-raised-button type="submit" class="btn btn-danger pull-right">Update Profile</button>
+                            <button mat-raised-button type="submit" (click)="save()" class="btn btn-danger pull-right">Actualizar Perfil</button>
                             <div class="clearfix"></div>
                         </form>
                     </div>
@@ -43,16 +43,21 @@
                 <div class="card card-profile">
                     <div class="card-avatar">
                         <a href="javascript:void(0)">
-                            <img class="img" src="./assets/img/faces/marc.jpg" />
+                            <img class="img" *ngIf="!Image" [src]="'assets/img/user.png'" />
+                            <img class="img" *ngIf="Image" [src]="Image.Url || 'assets/img/user.png'" />
                         </a>
                     </div>
                     <div class="card-body">
+                        <label class="input-file">
+                            <input type="file" (change)="FileUploadEvent($event)" class="btn-file"
+                                accept="image/jpeg,image/gif,image/png,application/pdf,image/x-eps" multiple> Cambiar Foto de perfil
+                        </label>
                         <!-- <h6 class="card-category text-gray">CEO / Co-Founder</h6>
                         <h4 class="card-title">Alec Thompson</h4>
                         <p class="card-description">
                             Don't be scared of the truth because we need to restart the human foundation in truth And I love you like Kanye loves Kanye I love Rick Owens’ bed design but the back is...
                         </p> -->
-                        <a href="javascript:void(0)" class="btn btn-danger btn-round">Cambiar Imagen</a>
+                        <!-- <a (click)="FileUploadEvent()" class="btn btn-danger btn-round">Cambiar Imagen</a> -->
                     </div>
                 </div>
             </div>
