--- a/src/app/admin/adoptions/adoptions/adoptions.component.html
+++ b/src/app/admin/adoptions/adoptions/adoptions.component.html
@@ -7,10 +7,10 @@
                         <h4 class="card-title">Opciones</h4>
                     </div>
                     <div class="card-body">
-                        <a [routerLink]="['/admin', 'administrador-inmueble']" class="btn btn-warning btn-block">Configurar formulario de adopción</a>
+                        <a [routerLink]="['/admin', 'configuracion-formulario']" class="btn btn-warning btn-block">Configurar formulario de adopción</a>
                     </div>
                     <div class="card-body">
-                        <a [routerLink]="['/admin', 'administrador-inmueble']" class="btn btn-warning btn-block">Configurar formulario de contrato</a>
+                        <a [routerLink]="['/admin', 'configuracion-formulario']" class="btn btn-warning btn-block">Configurar formulario de contrato</a>
                     </div>
                 </div>
             </div>
