--- a/src/app/admin/generalConsultations/general-consultation-editor/general-consultation-editor.component.html
+++ b/src/app/admin/generalConsultations/general-consultation-editor/general-consultation-editor.component.html
@@ -17,7 +17,7 @@
                                 </div>
                                 <div class="col-sm-12">
                                     <mat-form-field class="example-full-width">
-                                        <textarea matInput formControlName="Message" placeholder="Mensaje"
+                                        <textarea matInput formControlName="Content" placeholder="Mensaje"
                                             rows="5"></textarea>
                                     </mat-form-field>
                                 </div>
