--- a/src/app/login/singup/singup.component.html
+++ b/src/app/login/singup/singup.component.html
@@ -1,28 +1,38 @@
 <div class="container">
-    <div class="row">
-      <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
-        <div class="card card-signin my-5">
-          <div class="card-body">
-            <h5 class="card-title text-center">Registrate</h5>
-            <form class="form-signin" [formGroup]="LoginForm">
-              <div class="form-label-group">
-                <input formControlName="Email" type="email" id="inputEmail" class="form-control" placeholder="Correo electrónico" required autofocus>
-              </div>
-              <div class="form-label-group">
-                <input formControlName="password" type="password" id="inputPassword" class="form-control" placeholder="Contraseña" required>
-              </div>
-              <div class="form-label-group">
-                <input formControlName="confirmPassword" type="password" id="inputPassword" class="form-control" placeholder="Confirmar contraseña" required>
-              </div>
-              <div class="custom-control custom-checkbox mb-3">
-                <input type="checkbox" class="custom-control-input" id="customCheck1">
-                <label class="custom-control-label" for="customCheck1">Recuerdame</label>
-              </div>
-              <button (click)="createUser()" class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Registrate</button>
-              <p>¿Ya tienes cuenta? <a [routerLink]="['/session', 'singin']">inicia sessión</a></p>
-            </form>
-          </div>
+  <div class="row">
+    <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+      <div class="card card-signin my-5">
+        <div class="card-body">
+          <h5 class="card-title text-center">Registrate</h5>
+          <form class="form-signin" [formGroup]="LoginForm">
+            <div class="form-label-group">
+              <mat-form-field>
+                <input matInput formControlName="Email" type="email" id="inputEmail" placeholder="Correo electrónico"
+                  required autofocus>
+              </mat-form-field>
+            </div>
+            <div class="form-label-group">
+              <mat-form-field>
+                <input matInput formControlName="password" type="password" id="inputPassword" placeholder="Contraseña"
+                  required autofocus>
+              </mat-form-field>
+            </div>
+            <div class="form-label-group">
+              <mat-form-field>
+                <input matInput formControlName="confirmPassword" type="password" id="inputPassword"
+                  placeholder="Confirmar contraseña" required autofocus>
+              </mat-form-field>
+            </div>
+            <div class="custom-control custom-checkbox mb-3">
+              <input type="checkbox" class="custom-control-input" id="customCheck1">
+              <label class="custom-control-label" for="customCheck1">Recuerdame</label>
+            </div>
+            <button (click)="createUser()" class="btn btn-lg btn-primary btn-block text-uppercase"
+              type="submit">Registrate</button>
+            <p>¿Ya tienes cuenta? <a [routerLink]="['/session', 'singin']">inicia sessión</a></p>
+          </form>
         </div>
       </div>
     </div>
   </div>
+</div>
