--- a/src/app/admin/pets/pet-editor/pet-editor.component.html
+++ b/src/app/admin/pets/pet-editor/pet-editor.component.html
@@ -40,6 +40,17 @@
                                         <input matInput formControlName="Color" placeholder="Color">
                                     </mat-form-field>
                                 </div>
+                                <div class="col-sm-12 col-md-12">
+                                    <mat-form-field class="example-full-width">
+                                        <textarea matInput formControlName="MoreAbout" placeholder="Descripción u otros destalles"
+                                            rows="5"></textarea>
+                                    </mat-form-field>
+                                </div>
+                                <div *ngIf="InAdoptionEnable" class="col-sm-12 col-md-12">
+                                    <div class="form-label-group">
+                                        <mat-slide-toggle formControlName="InAdoption">¿Esta en adopción?</mat-slide-toggle>
+                                    </div>
+                                </div>
                             </div>
                         </form>
                     </div>
