--- a/src/app/admin/profile/profile/profile.component.html
+++ b/src/app/admin/profile/profile/profile.component.html
@@ -11,93 +11,116 @@
                         <form [formGroup]="UserForm">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <mat-form-field class="example-full-width">
-                                      <input matInput formControlName="Email" placeholder="Username" disabled>
+                                    <mat-form-field *ngIf="user" class="example-full-width">
+                                        <input matInput placeholder="{{user.Email}}" type="email" disabled>
                                     </mat-form-field>
                                 </div>
                                 <div class="col-md-6">
                                     <mat-form-field class="example-full-width">
-                                      <input matInput formControlName="FullName" placeholder="Nombre completo" type="email">
-                                    </mat-form-field>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6">
-                                  <mat-form-field class="example-full-width">
-                                    <input matInput formControlName="FullLastName" placeholder="Apellidos completos" type="text">
-                                  </mat-form-field>
-                                </div>
-                                <div class="col-md-6">
-                                  <mat-form-field class="example-full-width">
-                                    <input matInput formControlName="Birthday" placeholder="Fecha de nacimiento" type="text">
-                                  </mat-form-field>
-                                </div>
-                            </div>
-                            <button mat-raised-button type="submit" (click)="save()" class="btn btn-danger pull-right">Actualizar Perfil</button>
-                            <div class="clearfix"></div>
-                        </form>
-                    </div>
-                </div>
-                <div *ngIf="ShowCompany" class="card">
-                    <div class="card-header card-header-danger">
-                        <h4 class="card-title">Editar informacion de empresa</h4>
-                        <p class="card-category">Completa los datos</p>
-                    </div>
-                    <div class="card-body">
-                        <form [formGroup]="CompanyForm">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <mat-form-field class="example-full-width">
-                                      <input matInput formControlName="Name" placeholder="Nombre">
-                                    </mat-form-field>
-                                </div>
-                                <div class="col-md-6">
-                                    <mat-form-field class="example-full-width">
-                                      <input matInput formControlName="Description" placeholder="Descripción" type="email">
+                                        <input matInput formControlName="FullName" placeholder="Nombre completo"
+                                            type="text">
                                     </mat-form-field>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
-                                  <mat-form-field class="example-full-width">
-                                    <input matInput formControlName="DateIgnauration" placeholder="Fecha ignauracion" type="text">
-                                  </mat-form-field>
+                                    <mat-form-field class="example-full-width">
+                                        <input matInput formControlName="FullLastName" placeholder="Apellidos completos"
+                                            type="text">
+                                    </mat-form-field>
                                 </div>
                                 <div class="col-md-6">
-                                  <mat-form-field class="example-full-width">
-                                    <input matInput formControlName="AsociationType" placeholder="Tipo de asociacion" type="text">
-                                  </mat-form-field>
+                                    <mat-form-field class="example-full-width">
+                                        <input matInput formControlName="Birthday" placeholder="Fecha de nacimiento"
+                                            type="text">
+                                    </mat-form-field>
                                 </div>
                             </div>
-                            <button mat-raised-button type="submit" (click)="saveCompany()" class="btn btn-danger pull-right">Actualizar Empresa</button>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <mat-form-field class="example-full-width">
+                                        <input matInput formControlName="Phone" placeholder="Teléfono" type="text">
+                                    </mat-form-field>
+                                </div>
+                            </div>
+                            <button mat-raised-button type="submit" (click)="save()"
+                                class="btn btn-danger pull-right">Actualizar Perfil</button>
                             <div class="clearfix"></div>
                         </form>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card card-profile">
-                    <div class="card-avatar">
-                        <a href="javascript:void(0)">
-                            <img class="img" *ngIf="!Image" [src]="'assets/img/user.png'" />
-                            <img class="img" *ngIf="Image" [src]="Image.Url || 'assets/img/user.png'" />
-                        </a>
+                <app-image-upload *ngIf="ProfileImage" [Image]="ProfileImage" Title="Cambiar foto de perfil" (ImageEventReturn)="GetProfileImage($event)">
+                </app-image-upload>
+            </div>
+        </div>
+        <div *ngIf="ShowCompany">
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="card">
+                        <div class="card-header card-header-danger">
+                            <h4 class="card-title">Editar informacion de empresa</h4>
+                            <p class="card-category">Completa los datos</p>
+                        </div>
+                        <div class="card-body">
+                            <form [formGroup]="CompanyForm">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <mat-form-field class="example-full-width">
+                                            <input matInput formControlName="Name" placeholder="Nombre">
+                                        </mat-form-field>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <mat-form-field class="example-full-width">
+                                            <input matInput formControlName="Description" placeholder="Descripción"
+                                                type="email">
+                                        </mat-form-field>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <mat-form-field class="example-full-width">
+                                            <input matInput formControlName="DateIgnauration"
+                                                placeholder="Fecha ignauracion" type="text">
+                                        </mat-form-field>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <mat-form-field class="example-full-width">
+                                            <input matInput formControlName="AsociationType"
+                                                placeholder="Tipo de asociacion" type="text">
+                                        </mat-form-field>
+                                    </div>
+                                </div>
+                                <button mat-raised-button type="submit" (click)="saveCompany()"
+                                    class="btn btn-danger pull-right">Actualizar Empresa</button>
+                                <div class="clearfix"></div>
+                            </form>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <label class="input-file">
-                            <input type="file" (change)="FileUploadEvent($event)" class="btn-file"
-                                accept="image/jpeg,image/gif,image/png,application/pdf,image/x-eps" multiple> Cambiar Foto de perfil
-                        </label>
-                        <!-- <h6 class="card-category text-gray">CEO / Co-Founder</h6>
-                        <h4 class="card-title">Alec Thompson</h4>
-                        <p class="card-description">
-                            Don't be scared of the truth because we need to restart the human foundation in truth And I love you like Kanye loves Kanye I love Rick Owens’ bed design but the back is...
-                        </p> -->
-                        <!-- <a (click)="FileUploadEvent()" class="btn btn-danger btn-round">Cambiar Imagen</a> -->
+                </div>
+                <div class="col-md-4">
+                    <app-image-upload *ngIf="LogoCompanyImage" [Image]="LogoCompanyImage" Title="Cambiar logo de empresa" (ImageEventReturn)="GetLogoImage($event)">
+                    </app-image-upload>
+                </div>
+            </div>
+        </div>
+        <div *ngIf="!ShowCompany">
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="card">
+                        <div class="card-header card-header-danger">
+                            <h4 class="card-title">¿Tienes una empresa?</h4>
+                            <p class="card-category">Si posees una empresa o prestas servicios para el cuidado de la salud de los animales, has click en el siguiente botón</p>
+                        </div>
+                        <div class="card-body">
+                            <button mat-raised-button type="submit" (click)="saveh()"
+                                class="btn btn-danger pull-right">Agregar Empresa
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-  </div>
-  
+</div>
