--- a/src/assets/scss/core/cards/_card-profile.scss
+++ b/src/assets/scss/core/cards/_card-profile.scss
@@ -15,8 +15,10 @@
           margin-top: 15px;
       }
       img {
-          width: 100%;
-          height: auto;
+        //   width: 100%;
+        //   height: auto;
+          width: 130px;
+          height: 130px;
       }
   }
 
