--- a/src/app/admin/pets/pet-editor/pet-editor.component.html
+++ b/src/app/admin/pets/pet-editor/pet-editor.component.html
@@ -41,10 +41,10 @@
                                     </mat-form-field>
                                 </div>
                                 <div class="col-sm-12 col-md-12">
-                                    <mat-radio-group aria-label="Select an option">
+                                    <mat-radio-group formControlName="Gender" aria-label="Select an option">
                                         <mat-radio-button value="Macho">Macho</mat-radio-button>
                                         <mat-radio-button value="Hembra">Hembra</mat-radio-button>
-                                      </mat-radio-group>
+                                    </mat-radio-group>
                                 </div>
                                 <div class="col-sm-12 col-md-12">
                                     <mat-form-field class="example-full-width">
